Closed Bug 396329 Opened 17 years ago Closed 16 years ago

check mDOMNode to avoid crash

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: surkov, Assigned: surkov)

References

Details

Attachments

(1 file)

>	accessibility.dll!nsXULListitemAccessible::GetName(nsAString_internal & _retval={...})  Line 150 + 0x39	C++
 	xpcom_core.dll!NS_InvokeByIndex_P(nsISupports * that=0x05d5f78c, unsigned int methodIndex=11, unsigned int paramCount=1, nsXPTCVariant * params=0x0012d490)  Line 102	C++
 	xpc3250.dll!XPCWrappedNative::CallMethod(XPCCallContext & ccx={...}, XPCWrappedNative::CallMode mode=CALL_GETTER)  Line 2326 + 0x1e	C++
 	xpc3250.dll!XPCWrappedNative::GetAttribute(XPCCallContext & ccx={...})  Line 2078 + 0xe	C++
 	xpc3250.dll!XPC_WN_GetterSetter(JSContext * cx=0x034398f8, JSObject * obj=0x049d82a0, unsigned int argc=0, long * argv=0x05d2ff18, long * vp=0x0012d744)  Line 1499 + 0xc	C++
 	js3250.dll!js_Invoke(JSContext * cx=0x034398f8, unsigned int argc=0, unsigned int flags=2)  Line 1378 + 0x20	C
 	js3250.dll!js_InternalInvoke(JSContext * cx=0x034398f8, JSObject * obj=0x049d82a0, long fval=77428064, unsigned int flags=0, unsigned int argc=0, long * argv=0x00000000, long * rval=0x0012dec0)  Line 1474 + 0x14	C
 	js3250.dll!js_InternalGetOrSet(JSContext * cx=0x034398f8, JSObject * obj=0x049d82a0, long id=13301236, long fval=77428064, JSAccessMode mode=JSACC_READ, unsigned int argc=0, long * argv=0x00000000, long * rval=0x0012dec0)  Line 1546 + 0x1f	C
 	js3250.dll!js_NativeGet(JSContext * cx=0x034398f8, JSObject * obj=0x049d82a0, JSObject * pobj=0x049d82a0, JSScopeProperty * sprop=0x06019520, long * vp=0x0012dec0)  Line 3438 + 0x30	C
 	js3250.dll!js_GetProperty(JSContext * cx=0x034398f8, JSObject * obj=0x049d82a0, long id=13301236, long * vp=0x0012dec0)  Line 3581 + 0x19	C
 	js3250.dll!js_Interpret(JSContext * cx=0x034398f8, unsigned char * pc=0x05e52b26, long * result=0x0012dfd0)  Line 3851 + 0x21	C
 	js3250.dll!js_Invoke(JSContext * cx=0x034398f8, unsigned int argc=2, unsigned int flags=2)  Line 1399 + 0x13	C
 	xpc3250.dll!nsXPCWrappedJSClass::CallMethod(nsXPCWrappedJS * wrapper=0x05fdcab0, unsigned short methodIndex=22, const XPTMethodDescriptor * info=0x0347c688, nsXPTCMiniVariant * nativeParams=0x0012e334)  Line 1457 + 0x14	C++
 	xpc3250.dll!nsXPCWrappedJS::CallMethod(unsigned short methodIndex=22, const XPTMethodDescriptor * info=0x0347c688, nsXPTCMiniVariant * params=0x0012e334)  Line 566	C++
 	xpcom_core.dll!PrepareAndDispatch(nsXPTCStubBase * self=0x05fdcb18, unsigned int methodIndex=22, unsigned int * args=0x0012e3f4, unsigned int * stackBytesToPop=0x0012e3e4)  Line 114 + 0x1f	C++
 	xpcom_core.dll!SharedStub()  Line 142	C++
 	gklayout.dll!nsTreeBodyFrame::PaintText(int aRowIndex=16, nsTreeColumn * aColumn=0x05d3d418, const nsRect & aTextRect={...}, nsPresContext * aPresContext=0x05f650d8, nsIRenderingContext & aRenderingContext={...}, const nsRect & aDirtyRect={...}, int & aCurrX=14100)  Line 3420	C++
 	gklayout.dll!nsTreeBodyFrame::PaintCell(int aRowIndex=16, nsTreeColumn * aColumn=0x05d3d418, const nsRect & aCellRect={...}, nsPresContext * aPresContext=0x05f650d8, nsIRenderingContext & aRenderingContext={...}, const nsRect & aDirtyRect={...}, int & aCurrX=6360, nsPoint aPt={...})  Line 3166	C++
 	gklayout.dll!nsTreeBodyFrame::PaintRow(int aRowIndex=16, const nsRect & aRowRect={...}, nsPresContext * aPresContext=0x05f650d8, nsIRenderingContext & aRenderingContext={...}, const nsRect & aDirtyRect={...}, nsPoint aPt={...})  Line 2968	C++
 	gklayout.dll!nsTreeBodyFrame::PaintTreeBody(nsIRenderingContext & aRenderingContext={...}, const nsRect & aDirtyRect={...}, nsPoint aPt={...})  Line 2780 + 0x46	C++
 	gklayout.dll!PaintTreeBody(nsIFrame * aFrame=0x05f98e0c, nsIRenderingContext * aCtx=0x05d348e0, const nsRect & aDirtyRect={...}, nsPoint aPt={...})  Line 2709	C++
 	gklayout.dll!nsDisplayGeneric::Paint(nsDisplayListBuilder * aBuilder=0x0012e980, nsIRenderingContext * aCtx=0x05d348e0, const nsRect & aDirtyRect={...})  Line 817 + 0x2a	C++
 	gklayout.dll!nsDisplayList::Paint(nsDisplayListBuilder * aBuilder=0x0012e980, nsIRenderingContext * aCtx=0x05d348e0, const nsRect & aDirtyRect={...})  Line 293	C++
 	gklayout.dll!nsDisplayWrapList::Paint(nsDisplayListBuilder * aBuilder=0x0012e980, nsIRenderingContext * aCtx=0x05d348e0, const nsRect & aDirtyRect={...})  Line 673	C++
 	gklayout.dll!nsDisplayClip::Paint(nsDisplayListBuilder * aBuilder=0x0012e980, nsIRenderingContext * aCtx=0x05d348e0, const nsRect & aDirtyRect={...})  Line 865	C++
 	gklayout.dll!nsDisplayList::Paint(nsDisplayListBuilder * aBuilder=0x0012e980, nsIRenderingContext * aCtx=0x05d348e0, const nsRect & aDirtyRect={...})  Line 293	C++
 	gklayout.dll!nsLayoutUtils::PaintFrame(nsIRenderingContext * aRenderingContext=0x05d348e0, nsIFrame * aFrame=0x049cff04, const nsRegion & aDirtyRegion={...}, unsigned int aBackground=4292405740)  Line 853	C++
 	gklayout.dll!PresShell::Paint(nsIView * aView=0x060a90c0, nsIRenderingContext * aRenderingContext=0x05d348e0, const nsRegion & aDirtyRegion={...})  Line 5212 + 0x15	C++
 	gklayout.dll!nsViewManager::RenderViews(nsView * aView=0x05fead50, nsIRenderingContext & aRC={...}, const nsRegion & aRegion={...})  Line 605	C++
 	gklayout.dll!nsViewManager::Refresh(nsView * aView=0x05fead50, nsIRenderingContext * aContext=0x05d348e0, nsIRegion * aRegion=0x060cb140, unsigned int aUpdateFlags=1)  Line 495	C++
 	gklayout.dll!nsViewManager::DispatchEvent(nsGUIEvent * aEvent=0x0012edc4, nsEventStatus * aStatus=0x0012ec80)  Line 1065	C++
 	gklayout.dll!HandleEvent(nsGUIEvent * aEvent=0x0012edc4)  Line 171	C++
 	gkwidget.dll!nsWindow::DispatchEvent(nsGUIEvent * event=0x0012edc4, nsEventStatus & aStatus=nsEventStatus_eIgnore)  Line 1075 + 0xa	C++
 	gkwidget.dll!nsWindow::DispatchWindowEvent(nsGUIEvent * event=0x0012edc4, nsEventStatus & aStatus=nsEventStatus_eIgnore)  Line 1101	C++
 	gkwidget.dll!nsWindow::OnPaint(HDC__ * aDC=0x00000000)  Line 5725 + 0x1c	C++
 	gkwidget.dll!nsWindow::ProcessMessage(unsigned int msg=15, unsigned int wParam=0, long lParam=0, long * aRetValue=0x0012f274)  Line 4208 + 0x13	C++
 	gkwidget.dll!nsWindow::WindowProc(HWND__ * hWnd=0x0002048e, unsigned int msg=15, unsigned int wParam=0, long lParam=0)  Line 1288 + 0x1b	C++
 	user32.dll!7e368734() 	
 	user32.dll!7e368816() 	
 	user32.dll!7e36b4c0() 	
 	user32.dll!7e36b50c() 	
 	ntdll.dll!7c90eae3() 	
 	user32.dll!7e36d83f() 	
 	user32.dll!7e36d82a() 	
 	gkwidget.dll!nsWindow::DispatchStarvedPaints(HWND__ * aWnd=0x00040458, long aMsg=0)  Line 4012 + 0xa	C++
 	user32.dll!7e36ccd1() 	
 	user32.dll!7e36da57() 	
 	gkwidget.dll!nsWindow::DispatchPendingEvents()  Line 4049	C++
 	gkwidget.dll!nsWindow::ProcessMessage(unsigned int msg=512, unsigned int wParam=0, long lParam=20447637, long * aRetValue=0x0012f818)  Line 4438	C++
 	gkwidget.dll!nsWindow::WindowProc(HWND__ * hWnd=0x0002048e, unsigned int msg=512, unsigned int wParam=0, long lParam=20447637)  Line 1288 + 0x1b	C++
 	user32.dll!7e368734() 	
 	user32.dll!7e368816() 	
 	user32.dll!7e3689cd() 	
 	user32.dll!7e369402() 	
 	user32.dll!7e368a10() 	
 	gkwidget.dll!nsAppShell::ProcessNextNativeEvent(int mayWait=1)  Line 150	C++
 	gkwidget.dll!nsBaseAppShell::DoProcessNextNativeEvent(int mayWait=1)  Line 137 + 0xf	C++
 	gkwidget.dll!nsBaseAppShell::OnProcessNextEvent(nsIThreadInternal * thr=0x00b39310, int mayWait=1, unsigned int recursionDepth=0)  Line 247 + 0xf	C++
 	xpcom_core.dll!nsThread::ProcessNextEvent(int mayWait=1, int * result=0x0012fa0c)  Line 480	C++
 	xpcom_core.dll!NS_ProcessNextEvent_P(nsIThread * thread=0x00b39310, int mayWait=1)  Line 227 + 0x14	C++
 	gkwidget.dll!nsBaseAppShell::Run()  Line 154 + 0xc	C++
 	tkitcmps.dll!nsAppStartup::Run()  Line 170 + 0x1a	C++
 	xul.dll!XRE_main(int argc=1, char * * argv=0x00b38070, const nsXREAppData * aAppData=0x00b38458)  Line 3069 + 0x23	C++
 	seamonkey.exe!main(int argc=1, char * * argv=0x00b38070)  Line 99 + 0x12	C++
 	seamonkey.exe!mainCRTStartup()  Line 398 + 0x11	C
 	kernel32.dll!7c816fd7()
Attached patch patchSplinter Review
Attachment #281066 - Flags: review?(aaronleventhal)
Attachment #281066 - Flags: review?(aaronleventhal) → review+
Summary: check mDOMNode to avoid crach → check mDOMNode to avoid crash
Attachment #281066 - Flags: review?
Attachment #281066 - Flags: review? → approval1.9?
Blocks: fox3access
Attachment #281066 - Flags: approval1.9? → approval1.9+
checked in
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.