Bug 396329 - check mDOMNode to avoid crash, r=aaronlev, a=dsicore